# motor-imagery-eeg-decoder-robustness

./: .gitignore  CITATION.cff  DATA_PROVENANCE.md  Makefile  PUBLICATION_READINESS.md  README.md  REPRODUCIBILITY.md  STATISTICAL_REPORTING.md  SUBMISSION_READINESS.md  environment.yml  pyproject.toml  requirements.txt  run_all.sh
configs/: benchmark.yaml  benchmark_independent_masks.yaml
manuscript/: cover_letter.md  highlights.txt  manuscript.tex  references.bib
reports/: BNCI2014-001_BNCI2014_001_all_csp_lda_statistical_report_summary.md  BNCI2014-001_BNCI2014_001_all_csp_lda_statistical_report_table.tex  BNCI2014-001_BNCI2014_001_all_csp_lda_validation_checks.csv  BNCI2014-001_BNCI2014_001_all_riemann_lr_methods_figures_manifest.json  BNCI2014-001_BNCI2014_001_all_riemann_lr_statistical_report_summary.md  BNCI2014-001_BNCI2014_001_all_riemann_lr_statistical_report_table.tex  BNCI2014-001_BNCI2014_001_all_riemann_lr_validation_checks.csv  PhysionetMI_PhysionetMI_all_csp_lda_validation_checks.csv  PhysionetMI_PhysionetMI_all_csp_lda_validation_summary.json  PhysionetMI_PhysionetMI_all_riemann_lr_interactive_dashboard.html  PhysionetMI_PhysionetMI_all_riemann_lr_intervention_recommendations.html  PhysionetMI_PhysionetMI_all_riemann_lr_methods_figures_manifest.json  PhysionetMI_PhysionetMI_all_riemann_lr_statistical_report_summary.md  PhysionetMI_PhysionetMI_all_riemann_lr_statistical_report_table.tex  PhysionetMI_csp_lda_vs_riemann_lr_paired_comparison.md  PhysionetMI_csp_lda_vs_riemann_lr_paired_comparison.tex  PhysionetMI_csp_lda_vs_riemann_lr_validation.json  (+9 more)
(+141 files in other folders)
