[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bci-robustness-benchmark"
version = "0.2.3"
description = "Reproducible robustness benchmark for motor-imagery EEG decoders under deployment-relevant stressors."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
keywords = ["BCI", "EEG", "motor imagery", "robustness", "MOABB"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "PyYAML>=6.0",
]


[project.optional-dependencies]
eeg = [
  "mne>=1.5",
  "moabb>=1.0",
  "pyriemann>=0.6",
]
reports = [
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "plotly>=5.18",
]
dev = [
  "pytest>=8.0",
]
all = [
  "mne>=1.5",
  "moabb>=1.0",
  "pyriemann>=0.6",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "plotly>=5.18",
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
filterwarnings = [
  "ignore:.*not fully.*:RuntimeWarning",
]
